# apsig

./: .pre-commit-config.yaml  CHANGELOG.md  COPYING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  test_runner.py  zensical.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
dev/e2e/: server.py  server_ld.py  server_proof.py  server_rfc.py
dev/e2e/faker/: actor.py
docs/: CNAME  httpsig.md  ldsignature.md  proof.md
scripts/: sync_deps_with_linter.py
src/apsig/: __init__.py  _version.py  exceptions.py  ld_signature.py  rfc9421.py  tools.py
src/apsig/actor/: keytools.py  public_key.py
src/apsig/draft/: sign.py  tools.py  verify.py
src/apsig/ld/: ldsig.py
src/apsig/object_integrity_proofs/: sign.py  verify.py
src/apsig/proof/: __init__.py  sign.py  verify.py
src/apsig/utils/: multibase.py
tests/: test_draft.py  test_ld.py  test_multibase_ed25519.py  test_oip.py  test_proof.py  test_rfc9421.py
