[project]
name = "apsig"
version = "0.3.0"
description = "Signature implementation used in ActivityPub."
authors = [
    {name = "AmaseCocoa", email = "amase.cocoa@gmail.com"},
]
dependencies = [
    "cryptography>=43.0.1",
    "pynacl>=1.5.0",
    "multiformats>=0.3.1.post4",
    "jcs>=0.2.1",
    "pyld[aiohttp,requests]>=2.0.4",
]
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Operating System :: OS Independent',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Topic :: Security',
        'Natural Language :: English',
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
urls.Source = "https://github.com/AmaseCocoa/apsig"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "python test_runner.py"
[dependency-groups]
e2e = [
    "aiohttp>=3.11.12",
    "notturno[asgi]>=0.1.2",
    "trio>=0.28.0",
]
